syntax = "proto3";
package amqp.proxy;
service Router {
  rpc Publish (PublishParameter) returns (Response){
  }

  rpc Get (GetParameter) returns (GetResponse) {
  }

  rpc Ack (AckParameter) returns (Response) {
  }

  rpc Nack (NackParameter) returns (Response){
  }
}

message Response {
  uint32 error = 1;
  string msg = 2;
}

message PublishParameter{
  string exchange = 1;
  string key = 2;
  bool mandatory = 3;
  bool immediate = 4;
  string contentType = 5;
  bytes body = 6;
}

message GetParameter {
  string queue = 1;
}

message GetResponse {
  uint32 error = 1;
  string msg = 2;
  Data data = 3;
}

message Data {
  string receipt = 1;
  bytes body = 2;
}

message AckParameter {
  string queue = 1;
  string receipt = 2;
}

message NackParameter {
  string queue = 1;
  string receipt = 2;
}
